Console: Fixed bug for loading audio files in a directory.
Related to issue #394.

git-svn-id: http://hamster-svn/svn/repos/base@652 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Console/MPfm.Console.csproj
+++ b/MPfm/branches/current/MPfm.Console/MPfm.Console.csproj
@@ -19,7 +19,7 @@
     <WarningLevel>4</WarningLevel>
     <Externalconsole>True</Externalconsole>
     <AssemblyName>mpfm</AssemblyName>
-    <Commandlineparameters>"/Volumes/Data1/Flac/Castonguay Yanick/- Indie 12 - Session 2 - 022.flac"</Commandlineparameters>
+    <Commandlineparameters>"/Volumes/Data1/Flac/Radiohead/Kid A/"</Commandlineparameters>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>none</DebugType>
