Added ByteArrayQueue class to manage byte array FIFO queues. Added commented code to test out decoding channels in a different thread. Does not fix the click problems on Mac. :-( Added GetDataAvailable to Channel
git-svn-id: http://hamster-svn/svn/repos/base@654 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Console/MPfm.Console.csproj
+++ b/MPfm/branches/current/MPfm.Console/MPfm.Console.csproj
@@ -19,7 +19,8 @@
     <WarningLevel>4</WarningLevel>
     <Externalconsole>True</Externalconsole>
     <AssemblyName>mpfm</AssemblyName>
-    <Commandlineparameters>"/Volumes/Data1/Flac/Varèse Edgard/The Complete Works/"</Commandlineparameters>
+    <Commandlineparameters>"/Volumes/Data1/Flac/Radiohead/OK Computer/"</Commandlineparameters>
+    <ConsolePause>False</ConsolePause>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>none</DebugType>
