Moved classes that were unique to desktop platforms from MPfm.Core to MPfm.WindowsControls (this will enable MPfm.Core to build on iOS and Android). Added preprocessor conditions for multiple playforms in Tracing.
Related to issue #405 and issue #406.


git-svn-id: http://hamster-svn/svn/repos/base@655 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
+++ b/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
@@ -97,6 +97,8 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Containers\FlowLayoutPanelTheme.cs" />
+    <Compile Include="Misc\ColorManipulation.cs" />
+    <Compile Include="Misc\ImageConversion.cs" />
     <Compile Include="Fonts\CustomFont.cs" />
     <Compile Include="Fonts\CustomFontEditorForm.cs">
       <SubType>Form</SubType>
@@ -131,6 +133,7 @@
     <Compile Include="Misc\BackgroundGradient.cs" />
     <Compile Include="Misc\Gradient.cs" />
     <Compile Include="Containers\PanelTheme.cs" />
+    <Compile Include="Misc\ImageManipulation.cs" />
     <Compile Include="Misc\PaintHelper.cs" />
     <Compile Include="ScrollBar\HScrollBar.cs">
       <SubType>Component</SubType>
