BASS.NET is currently compatible with Windows, Linux, Mac and iOS, but not Android! Since only the P/Invoke part of BASS.NET is used, replace BASS.NET with a minimal P/Invoke library.
Related to issue #405 and issue #406.


git-svn-id: http://hamster-svn/svn/repos/base@657 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Sound/MPfm.Sound.csproj
+++ b/MPfm/branches/current/MPfm.Sound/MPfm.Sound.csproj
@@ -117,10 +117,14 @@
     <Compile Include="BassWrapper\ASIO\BassASIOEnums.cs" />
     <Compile Include="BassWrapper\ASIO\BassASIOStructs.cs" />
     <Compile Include="BassWrapper\ASIO\BassASIOMethods.cs" />
-    <Compile Include="BassWrapper\BassWrapper.cs" />
     <Compile Include="BassWrapper\BassEnums.cs" />
     <Compile Include="BassWrapper\BassStructs.cs" />
     <Compile Include="BassWrapper\BassCallbacks.cs" />
+    <Compile Include="BassWrapper\BassMethods.cs" />
+    <Compile Include="BassWrapper\Mix\BassMixCallbacks.cs" />
+    <Compile Include="BassWrapper\Mix\BassMixEnums.cs" />
+    <Compile Include="BassWrapper\Mix\BassMixMethods.cs" />
+    <Compile Include="BassWrapper\Mix\BassMixStructs.cs" />
     <Compile Include="BassWrapper\Wasapi\BassWasapiMethods.cs" />
     <Compile Include="BassWrapper\Wasapi\BassWasapiEnums.cs" />
     <Compile Include="BassWrapper\Wasapi\BassWasapiStructs.cs" />
