Added BASSFX structs, enums, methods and callbacks. Added BASS methods (but a lot of them are commented). Added BassWrapperGlobals to set the appropriate dll filename for each platform.
Related to issue #407.


git-svn-id: http://hamster-svn/svn/repos/base@658 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Sound/MPfm.Sound.csproj
+++ b/MPfm/branches/current/MPfm.Sound/MPfm.Sound.csproj
@@ -121,6 +121,11 @@
     <Compile Include="BassWrapper\BassStructs.cs" />
     <Compile Include="BassWrapper\BassCallbacks.cs" />
     <Compile Include="BassWrapper\BassMethods.cs" />
+    <Compile Include="BassWrapper\BassWrapperGlobals.cs" />
+    <Compile Include="BassWrapper\FX\BassFXCallbacks.cs" />
+    <Compile Include="BassWrapper\FX\BassFXEnums.cs" />
+    <Compile Include="BassWrapper\FX\BassFXMethods.cs" />
+    <Compile Include="BassWrapper\FX\BassFXStructs.cs" />
     <Compile Include="BassWrapper\Mix\BassMixCallbacks.cs" />
     <Compile Include="BassWrapper\Mix\BassMixEnums.cs" />
     <Compile Include="BassWrapper\Mix\BassMixMethods.cs" />
