--- a/MPfm/branches/current/MPfm.Library/MPfm.Library.Android.csproj
+++ b/MPfm/branches/current/MPfm.Library/MPfm.Library.Android.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -98,25 +98,6 @@
     <Reference Include="Mono.Data.Sqlite" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Gateway\IMPfmGateway.cs" />
-    <Compile Include="Gateway\ISQLiteGateway.cs" />
-    <Compile Include="Gateway\MPfmGateway.cs" />
-    <Compile Include="ILibrary.cs" />
-    <Compile Include="Objects\PlaylistFile.cs" />
-    <Compile Include="Objects\History.cs" />
-    <Compile Include="Objects\Setting.cs" />
-    <Compile Include="Gateway\SQLiteGateway.cs" />
-    <Compile Include="Objects\Folder.cs" />
-    <Compile Include="Library.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UpdateLibrary\UpdateLibraryProgressDataSong.cs" />
-    <Compile Include="UpdateLibrary\UpdateLibraryFinishedData.cs" />
-    <Compile Include="UpdateLibrary\UpdateLibraryArgument.cs" />
-    <Compile Include="UpdateLibrary\UpdateLibraryMode.cs" />
-    <Compile Include="UpdateLibrary\UpdateLibraryProgressData.cs" />
-    <Compile Include="UpdateLibrary\UpdateLibraryException.cs" />
-  </ItemGroup>
-  <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
   </ItemGroup>
   <ItemGroup>
@@ -155,5 +136,23 @@
   <Target Name="AfterBuild">
   </Target>
   -->
-  <ItemGroup />
+  <ItemGroup>
+    <Compile Include="Gateway\IMPfmGateway.cs" />
+    <Compile Include="Gateway\ISQLiteGateway.cs" />
+    <Compile Include="Gateway\MPfmGateway.cs" />
+    <Compile Include="ILibrary.cs" />
+    <Compile Include="Objects\PlaylistFile.cs" />
+    <Compile Include="Objects\History.cs" />
+    <Compile Include="Objects\Setting.cs" />
+    <Compile Include="Gateway\SQLiteGateway.cs" />
+    <Compile Include="Objects\Folder.cs" />
+    <Compile Include="Library.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UpdateLibrary\UpdateLibraryProgressDataSong.cs" />
+    <Compile Include="UpdateLibrary\UpdateLibraryFinishedData.cs" />
+    <Compile Include="UpdateLibrary\UpdateLibraryArgument.cs" />
+    <Compile Include="UpdateLibrary\UpdateLibraryMode.cs" />
+    <Compile Include="UpdateLibrary\UpdateLibraryProgressData.cs" />
+    <Compile Include="UpdateLibrary\UpdateLibraryException.cs" />
+  </ItemGroup>
 </Project>
