--- a/MPfm/branches/current/MPfm.Library/MPfm.Library.iOS.csproj
+++ b/MPfm/branches/current/MPfm.Library/MPfm.Library.iOS.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -98,25 +98,6 @@
     <Reference Include="Mono.Data.Sqlite" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Gateway\IMPfmGateway.cs" />
-    <Compile Include="Gateway\ISQLiteGateway.cs" />
-    <Compile Include="Gateway\MPfmGateway.cs" />
-    <Compile Include="ILibrary.cs" />
-    <Compile Include="Objects\PlaylistFile.cs" />
-    <Compile Include="Objects\History.cs" />
-    <Compile Include="Objects\Setting.cs" />
-    <Compile Include="Gateway\SQLiteGateway.cs" />
-    <Compile Include="Objects\Folder.cs" />
-    <Compile Include="Library.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UpdateLibrary\UpdateLibraryProgressDataSong.cs" />
-    <Compile Include="UpdateLibrary\UpdateLibraryFinishedData.cs" />
-    <Compile Include="UpdateLibrary\UpdateLibraryArgument.cs" />
-    <Compile Include="UpdateLibrary\UpdateLibraryMode.cs" />
-    <Compile Include="UpdateLibrary\UpdateLibraryProgressData.cs" />
-    <Compile Include="UpdateLibrary\UpdateLibraryException.cs" />
-  </ItemGroup>
-  <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
   </ItemGroup>
   <ItemGroup>
@@ -141,5 +122,37 @@
   <Target Name="AfterBuild">
   </Target>
   -->
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\MPfm.Core\MPfm.Core.iOS.csproj">
+      <Project>{D536FDE5-989E-4979-9B39-63621AE4A205}</Project>
+      <Name>MPfm.Core.iOS</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MPfm.Player\MPfm.Player.iOS.csproj">
+      <Project>{FEB7497C-784C-4380-874F-46FD93C82BA1}</Project>
+      <Name>MPfm.Player.iOS</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MPfm.Sound\MPfm.Sound.iOS.csproj">
+      <Project>{D92F718E-9A24-4B8B-9E40-77F93CF89EAE}</Project>
+      <Name>MPfm.Sound.iOS</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Gateway\IMPfmGateway.cs" />
+    <Compile Include="Gateway\ISQLiteGateway.cs" />
+    <Compile Include="Gateway\MPfmGateway.cs" />
+    <Compile Include="ILibrary.cs" />
+    <Compile Include="Objects\PlaylistFile.cs" />
+    <Compile Include="Objects\History.cs" />
+    <Compile Include="Objects\Setting.cs" />
+    <Compile Include="Gateway\SQLiteGateway.cs" />
+    <Compile Include="Objects\Folder.cs" />
+    <Compile Include="Library.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UpdateLibrary\UpdateLibraryProgressDataSong.cs" />
+    <Compile Include="UpdateLibrary\UpdateLibraryFinishedData.cs" />
+    <Compile Include="UpdateLibrary\UpdateLibraryArgument.cs" />
+    <Compile Include="UpdateLibrary\UpdateLibraryMode.cs" />
+    <Compile Include="UpdateLibrary\UpdateLibraryProgressData.cs" />
+    <Compile Include="UpdateLibrary\UpdateLibraryException.cs" />
+  </ItemGroup>
 </Project>
