--- a/MPfm/branches/current/MPfm.Sound/MPfm.Sound.iOS.csproj
+++ b/MPfm/branches/current/MPfm.Sound/MPfm.Sound.iOS.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -91,42 +91,6 @@
     <Reference Include="monotouch" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AudioFiles\AudioFile.cs" />
-    <Compile Include="AudioFiles\AudioTools.cs" />
-    <Compile Include="AudioFiles\AudioFileFormatExtension.cs" />
-    <Compile Include="AudioFiles\AudioFileFormatExtensions.cs" />
-    <Compile Include="Bass.Net\Channel.cs" />
-    <Compile Include="Bass.Net\ChannelType.cs" />
-    <Compile Include="Bass.Net\ASIOInfo.cs" />
-    <Compile Include="Bass.Net\IChannel.cs" />
-    <Compile Include="Bass.Net\IMixerChannel.cs" />
-    <Compile Include="Bass.Net\ITestDevice.cs" />
-    <Compile Include="Bass.Net\MixerChannel.cs" />
-    <Compile Include="Bass.Net\DriverType.cs" />
-    <Compile Include="Bass.Net\TestDevice.cs" />
-    <Compile Include="Bass.Net\DeviceHelper.cs" />
-    <Compile Include="Bass.Net\Device.cs" />
-    <Compile Include="Bass.Net\Exception.cs" />
-    <Compile Include="Bass.Net\Base.cs" />
-    <Compile Include="AudioFiles\ConvertAudio.cs" />
-    <Compile Include="AudioFiles\AudioFileFormat.cs" />
-    <Compile Include="Tags\APEMetadata.cs" />
-    <Compile Include="Playlists\Playlist.cs" />
-    <Compile Include="Playlists\PlaylistItem.cs" />
-    <Compile Include="Playlists\PlaylistTools.cs" />
-    <Compile Include="Playlists\PlaylistFileFormat.cs" />
-    <Compile Include="PeakFile.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tags\APETag.cs" />
-    <Compile Include="Tags\SV7Metadata.cs" />
-    <Compile Include="Tags\SV7Tag.cs" />
-    <Compile Include="Tags\ID3v2Tag.cs" />
-    <Compile Include="Tags\ID3v2Metadata.cs" />
-    <Compile Include="Tags\SV8Tag.cs" />
-    <Compile Include="Tags\SV8Metadata.cs" />
-    <Compile Include="XingInfoHeaderReader.cs" />
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="Lib\bass.dll" />
     <Content Include="Lib\Bass.Net.dll" />
     <Content Include="Lib\bassasio.dll" />
@@ -150,5 +114,62 @@
       <Project>{D536FDE5-989E-4979-9B39-63621AE4A205}</Project>
       <Name>MPfm.Core.iOS</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="AudioFiles\AudioFile.cs" />
+    <Compile Include="AudioFiles\AudioTools.cs" />
+    <Compile Include="AudioFiles\AudioFileFormatExtension.cs" />
+    <Compile Include="AudioFiles\AudioFileFormatExtensions.cs" />
+    <Compile Include="Bass.Net\Channel.cs" />
+    <Compile Include="Bass.Net\ChannelType.cs" />
+    <Compile Include="Bass.Net\ASIOInfo.cs" />
+    <Compile Include="Bass.Net\IChannel.cs" />
+    <Compile Include="Bass.Net\IMixerChannel.cs" />
+    <Compile Include="Bass.Net\ITestDevice.cs" />
+    <Compile Include="Bass.Net\MixerChannel.cs" />
+    <Compile Include="Bass.Net\DriverType.cs" />
+    <Compile Include="Bass.Net\TestDevice.cs" />
+    <Compile Include="Bass.Net\DeviceHelper.cs" />
+    <Compile Include="Bass.Net\Device.cs" />
+    <Compile Include="Bass.Net\Exception.cs" />
+    <Compile Include="Bass.Net\Base.cs" />
+    <Compile Include="AudioFiles\ConvertAudio.cs" />
+    <Compile Include="AudioFiles\AudioFileFormat.cs" />
+    <Compile Include="BassWrapper\ASIO\BassASIOCallbacks.cs" />
+    <Compile Include="BassWrapper\ASIO\BassASIOEnums.cs" />
+    <Compile Include="BassWrapper\ASIO\BassASIOStructs.cs" />
+    <Compile Include="BassWrapper\ASIO\BassASIOMethods.cs" />
+    <Compile Include="BassWrapper\BassEnums.cs" />
+    <Compile Include="BassWrapper\BassStructs.cs" />
+    <Compile Include="BassWrapper\BassCallbacks.cs" />
+    <Compile Include="BassWrapper\BassMethods.cs" />
+    <Compile Include="BassWrapper\BassWrapperGlobals.cs" />
+    <Compile Include="BassWrapper\FX\BassFXCallbacks.cs" />
+    <Compile Include="BassWrapper\FX\BassFXEnums.cs" />
+    <Compile Include="BassWrapper\FX\BassFXMethods.cs" />
+    <Compile Include="BassWrapper\FX\BassFXStructs.cs" />
+    <Compile Include="BassWrapper\Mix\BassMixCallbacks.cs" />
+    <Compile Include="BassWrapper\Mix\BassMixEnums.cs" />
+    <Compile Include="BassWrapper\Mix\BassMixMethods.cs" />
+    <Compile Include="BassWrapper\Mix\BassMixStructs.cs" />
+    <Compile Include="BassWrapper\Wasapi\BassWasapiMethods.cs" />
+    <Compile Include="BassWrapper\Wasapi\BassWasapiEnums.cs" />
+    <Compile Include="BassWrapper\Wasapi\BassWasapiStructs.cs" />
+    <Compile Include="BassWrapper\Wasapi\BassWasapiCallbacks.cs" />
+    <Compile Include="Tags\APEMetadata.cs" />
+    <Compile Include="Playlists\Playlist.cs" />
+    <Compile Include="Playlists\PlaylistItem.cs" />
+    <Compile Include="Playlists\PlaylistTools.cs" />
+    <Compile Include="Playlists\PlaylistFileFormat.cs" />
+    <Compile Include="PeakFile.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tags\APETag.cs" />
+    <Compile Include="Tags\SV7Metadata.cs" />
+    <Compile Include="Tags\SV7Tag.cs" />
+    <Compile Include="Tags\ID3v2Tag.cs" />
+    <Compile Include="Tags\ID3v2Metadata.cs" />
+    <Compile Include="Tags\SV8Tag.cs" />
+    <Compile Include="Tags\SV8Metadata.cs" />
+    <Compile Include="XingInfoHeaderReader.cs" />
   </ItemGroup>
 </Project>
